# FT-Conformer-RNN

./: .gitignore  Archi_project.md  README.md  info.md  main.py  pyproject.toml  requirements_unix.txt  requirements_win.txt  test_on_fr.py
check/: test_nemo.py
config/: info_config.md  model_config.yaml  other_info.md
ft_conformer_rnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
setup/: README.md  download_model.py  setup_env.py  test_inference.py  test_training.py
